Fix init of HTML documents to set the right case-sensitivity on the CSS parser even for XSLT.  Bug 322461, r+sr=jst