content/html/document/src/nsHTMLDocument.cpp
@@ -321,7 +321,8 @@ IdAndNameHashInitEntry(PLDHashTable *table, PLDHashEntryHdr *entry,
   // bother initializing members to 0.
 
 nsHTMLDocument::nsHTMLDocument()
-  : mCompatMode(eCompatibility_NavQuirks)
+  : mCompatMode(eCompatibility_NavQuirks),
+    mDefaultNamespaceID(kNameSpaceID_None)
 {
 
   // NOTE! nsDocument::operator new() zeroes out all members, so don't
@@ -355,6 +356,12 @@ nsHTMLDocument::Init()
 {
   nsresult rv = nsDocument::Init();
   NS_ENSURE_SUCCESS(rv, rv);
+
+  // Now reset the case-sensitivity of the CSSLoader, since we default
+  // to being HTML, not XHTML.  Also, reset the compatibility mode to
+  // match our compat mode.
+  CSSLoader()->SetCaseSensitive(IsXHTML());
+  CSSLoader()->SetCompatibilityMode(mCompatMode);
 
   static PLDHashTableOps hash_table_ops =
   {
